--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
   <!-- Material Design fonts -->
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://github.com/valor-software/ng2-select/blob/development/demo/src/assets/css/ng2-select.css" >
 </head>
 
 <body>
